more on FreeBSD and Cygwin
git-svn-id: https://svn.r-project.org/R/branches/R-2-12-branch@54315 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -3918,7 +3918,9 @@ on earlier versions in the past).  Since Darwin (the base OS of Mac OS
 X) is based on FreeBSD we find testing on Darwin tends to pick up most
 potential problems on FreeBSD.  However, FreeBSD lacks adequate
 collation support for multi-byte locales (Mac OS X includes a version of
-ICU), and also does not (yet) implement C99 complex math functions.
+ICU), and also does not (yet) implement C99 complex math functions
+(which means that it used the little-tested emulation code in the @R{}
+sources, and that had some serious errors prior to @R{} 2.12.2).
 
 The native BSD @command{make} suffices to build @R{} but a number of
 packages require @acronym{GNU} @command{make}, despite the
@@ -4379,12 +4381,10 @@ environment can be found in the ``R on AIX'' project on R-Forge
 
 The Cygwin emulation layer on Windows can be treated as a Unix-alike OS.
 This is unsupported, but experiments have been conducted and a few
-workarounds added for @R{} 2.6.0.  @R{} 2.13.0 requires C99 complex type
-support, which should appear in
-2011@footnote{@uref{http://cygwin.net/ml/cygwin-patches/2010-q4/msg00000.html}.},
-based on NetBSD code@footnote{which it seems is derived from the code of
-@uref{http://www.moshier.net/c9x_readme.html}.} used in @samp{netlib
-1.19.0}.
+workarounds added for @R{} 2.6.0.  @R{} 2.13.0 will require C99 complex
+type support, which should appear in 2011: versions up to 2.12.2 will
+use the little-tested (and buggy at least in @R{} 2.10.0 to 2.12.1)
+emulation code.
 
 Only building as a shared library works,@footnote{Windows DLLs need to
 have all links resolved at build time and so cannot resolve against
