port r54333 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-12-branch@54334 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-lang.texi
+++ b/doc/manual/R-lang.texi
@@ -4408,7 +4408,7 @@ are generally accessed via @code{get} and @code{assign}, although they
 can also be represented by text strings in some limited circumstances
 when there is no ambiguity (e.g.@: @code{"x" <- 1}). As @code{get} and
 @code{assign} are not restricted to names that are identifiers they do
-not recognise subscripting operators or assignment functions. The
+not recognise subscripting operators or replacement functions. The
 following pairs are @emph{not} equivalent
 @findex get
 @findex assign
