--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -596,12 +596,13 @@ imports.  (Packages without namespaces will work under somewhat less
 restrictive assumptions.)
 
 Two exceptions are allowed: if the @file{R} subdirectory contains a file
-@file{sysdata.rda} (a saved image of @R{} objects) this will be
+@file{sysdata.rda} (a saved image of @R{} objects: please use suitable
+compression as suggested by @code{tools::resaveRdaFiles}) this will be
 lazy-loaded into the name space/package environment -- this is intended
-for system datasets that are not intended to be user-accessible @emph{via}
-@code{data}.  Also, files ending in @samp{.in} will be allowed in the
-@file{R} directory to allow a @file{configure} script to generate
-suitable files.
+for system datasets that are not intended to be user-accessible
+@emph{via} @code{data}.  Also, files ending in @samp{.in} will be
+allowed in the @file{R} directory to allow a @file{configure} script to
+generate suitable files.
 
 Only @acronym{ASCII} characters (and the control characters tab,
 formfeed, LF and CR) should be used in code files.  Other characters are
