--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -771,13 +771,14 @@ with @code{R_LIBS} set to ensure that the copy of the package installed
 during testing will be found by @code{library(@var{pkg_name})}.
 
 If @file{tests} has a subdirectory @file{Examples} containing a file
-@code{@var{pkg}-Ex.Rout.save},  this is compared to the output file for
+@code{@var{pkg}-Ex.Rout.save}, this is compared to the output file for
 running the examples when the latter are checked.
 
-Subdirectory @file{exec} could contain additional executables the package
-needs, typically scripts for interpreters such as the shell, Perl, or
-Tcl.  This mechanism is currently used only by a very few packages, and
-still experimental.
+Subdirectory @file{exec} could contain additional executables the
+package needs, typically scripts for interpreters such as the shell,
+Perl, or Tcl.  This mechanism is currently used only by a very few
+packages, and still experimental.  NB: only files (and not directories)
+under @file{exec} are installed.
 
 Subdirectory @file{po} is used for files related to @emph{localization}:
 @pxref{Internationalization}.
