a few more details
git-svn-id: https://svn.r-project.org/R/trunk@54372 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -778,7 +778,8 @@ Subdirectory @file{exec} could contain additional executables the
 package needs, typically scripts for interpreters such as the shell,
 Perl, or Tcl.  This mechanism is currently used only by a very few
 packages, and still experimental.  NB: only files (and not directories)
-under @file{exec} are installed.
+under @file{exec} are installed, and they are all marked as executable
+(mode @code{755}) on POSIX platforms.
 
 Subdirectory @file{po} is used for files related to @emph{localization}:
 @pxref{Internationalization}.
