--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -3554,7 +3554,7 @@ Default: true.
 @item _R_CHECK_COMPACT_DATA2_
 If true, check data for ascii and uncompressed saves, and also check if
 using @command{bzip2} or @code{xz} compression would be significantly
-better.  
+better.  Implies @env{_R_CHECK_COMPACT_DATA_} is true.
 Default: false.
 @item _R_CHECK_SKIP_ARCH_
 Comma-separated list of architectures that will be omitted from
@@ -3563,15 +3563,22 @@ Default: none.
 @item _R_CHECK_SKIP_TESTS_ARCH_
 Comma-separated list of architectures that will be omitted from
 running tests in a multi-arch setup.
-Default:none.
+Default: none.
 @item _R_CHECK_SKIP_EXAMPLES_ARCH_
 Comma-separated list of architectures that will be omitted from
 running examples in a multi-arch setup.
-Default:none.
+Default: none.
 @item _R_CHECK_VC_DIRS_
 Should the unpacked package directory be checked for version-control
-directories (@file{CVS}, @file{.svn} @dots{}).
-Default:true for tarballs
+directories (@file{CVS}, @file{.svn} @dots{})?
+Default: true for tarballs.
+@item _R_CHECK_USE_DU_
+Should @command{du} be used to find the installed sizes of packages?
+@command{R CMD check} does check for the availability of @command{du},
+but this option allows the check to be overruled if an unsuitable
+command is found (including one that does not respect the @option{-k}
+flag to report in units of 1Kb). 
+Default: true.
 @end vtable
 
 @node R coding standards, Testing R code, Tools, Top
