--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4523,6 +4523,8 @@ installer will also need the following:
 @LaTeX{}
 @item
 The Inno Setup installer
+@item
+(optional) @code{qpdf}
 @end itemize
 
 @enindex PATH
@@ -4753,6 +4755,12 @@ when building external software.
 
 @node Useful additional programs,  , The MinGW toolchain, The Windows toolset
 @section Useful additional programs
+
+The process of making the installer will make use of @code{qpdf} to
+compact some of the package vignettes, if available.  MinGW binaries of
+@code{qpdf} are available from
+@uref{http://sourceforge.net/@/projects/@/qpdf/@/files/}.  Set the path
+to the @code{qpdf} installation in file @file{MkRules.local}.
 
 Developers of packages will find some of the `goodies' at
 @uref{http://www.stats.ox.ac.uk/@/pub/@/Rtools/@/goodies} useful.  
