--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1617,7 +1617,8 @@ more than one library, of course.
 
 If installing packages on a Unix-alike to be used by other users, ensure
 that the system @code{umask} is set to give sufficient permissions (see
-also @code{Sys.umask} in @R{}).
+also @code{Sys.umask} in @R{}).  (To a large extent this is unecessary
+in recent versions of @R{}, which install packages as if @code{umask = 022}.)
 
 For most users it suffices to call
 @samp{install.packages(@var{pkgname})} or its GUI equivalent if the
