--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -3904,17 +3904,40 @@ the configure flag @option{--disable-largefile} was needed (since
 @section FreeBSD
 @cindex FreeBSD
 
-Rainer Hurling has reported success on @cputype{x86_64} FreeBSD 9.0 (and
-on earlier versions in the past).  Since Darwin (the base OS of Mac OS
-X) is based on FreeBSD we find testing on Darwin tends to pick up most
+Rainer Hurling has reported success on @cputype{amd64} FreeBSD 9.0 (and
+on earlier versions in the past), and Brian Ripley tested
+@cputype{amd64} FreeBSD 8.2.  Since Darwin (the base OS of Mac OS X) is
+based on FreeBSD we find testing on Darwin tends to pick up most
 potential problems on FreeBSD.  However, FreeBSD lacks adequate
-collation support for multi-byte locales (Mac OS X includes a version of
-ICU), and also does not (yet) implement C99 complex math functions.
+collation support for multi-byte locales (but a port of ICU is
+available), and does not yet implement C99 complex math functions (for
+which @R{}'s substitutes are used).
 
 The native BSD @command{make} suffices to build @R{} but a number of
 packages require @acronym{GNU} @command{make}, despite the
 recommendations of the ``Writing R Extensions'' manual.  (The BSD
 version is @command{bsdmake} on Darwin.)
+
+The simplest way to get the additional sofware needed to build @R{} is
+to install a pre-compiled version first, e.g.@: by
+
+@example
+pkg_add -r R
+@end example
+
+@noindent
+(on the system this was tested on, this installed Tcl, Tk, blas, lapack
+and @code{gcc-4.5.3} which includes @command{gfortran45}).  A listing of
+dependencies (not necessarily for current @R{}) can be found at
+@uref{http://www.freebsd.org/@/ports/@/lang.html}: you will however also
+need a @TeX{} system to build the manuals.
+
+Then @R{} itself can be built by something like
+
+@example
+./configure CC=gcc45 F77=gfortran45 CXX=g++45 FC=gfortran45
+@end example
+
 
 @node Mac OS X, Solaris, FreeBSD, Platform notes
 @section Mac OS X
