port r54408 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-12-branch@54409 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -3939,7 +3939,8 @@ pkg_add -r R
 and @code{gcc-4.5.3} which includes @command{gfortran45}).  A listing of
 dependencies (not necessarily for current @R{}) can be found at
 @uref{http://www.freebsd.org/@/ports/@/lang.html}: you will however also
-need a @TeX{} system to build the manuals.
+need a @TeX{} system@footnote{TeXLive is recommended.} to build the
+manuals.
 
 Then @R{} itself can be built by something like
 
@@ -3947,6 +3948,8 @@ Then @R{} itself can be built by something like
 ./configure CC=gcc45 F77=gfortran45 CXX=g++45 FC=gfortran45
 @end example
 
+There are also FreeBSD packages for a small eclectic collection of
+@acronym{CRAN} packages.
 
 @node Mac OS X, Solaris, FreeBSD, Platform notes
 @section Mac OS X
