--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1996,10 +1996,28 @@ including Adobe Acrobat (not Reader), Apple's Preview@footnote{Select
 `Save as', and select `Reduce file size' from the `Quartz filter'
 menu'.}, some versions of Multivalent, Pdftk
 (@uref{http://www.pdflabs.com/@/tools/@/pdftk-the-pdf-toolkit/}) and
-@command{qpdf} (@uref{http://qpdf.sourceforge.net/}), as well as
-numerous commercial and shareware Windows programs.  Note that these do
-not all try the same size-reduction strategies, and Acrobat can be much
-better at reducing the size of embedded images.
+@command{qpdf} (@uref{http://qpdf.sourceforge.net/}), 
+and Ghostscript (which converts PDF to PDF by
+
+@example
+ps2pdf @var{options} -dAutoRotatePages=/None @var{in}.pdf @var{out}.pdf
+@end example
+
+@noindent
+and suitable options might be
+
+@example
+-dPDFSETTINGS=/screen
+-dPDFSETTINGS=/ebook
+@end example
+
+@noindent
+(see @uref{http://pages.cs.wisc.edu/@/~ghost/@/doc/@/cvs/@/Ps2pdf.htm}
+for more) and consider all the options for image downsampling) as well
+as numerous commercial and shareware Windows programs.  Note that these
+do not all try the same size-reduction strategies, and Acrobat can be
+much better at reducing the size of embedded images than some of the
+others.
 
 Since @command{qpdf} is fairly readily available (e.g.@: it has binaries
 for Windows and packages in Debian/Ubuntu), there is an option
